--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
 
     <footer>
         <span>  <h3>Brands</h3>
-            <a id="Contactpagelink" href="">Fender</a>&nbsp;&nbsp;<a id="Contactpagelink" href="">Contact Us</a><br/>
-            <a id="Contactpagelink" href="">Gibson</a><br/>
-            <a id="Contactpagelink" href="">Hofner</a><br/>
-            <a id="Contactpagelink" href="">Rickenbaker</a><br/>
-            <a id="Contactpagelink" href="">Yamaha</a><br/>
-            <a id="Contactpagelink" href="">Warwick</a><br/>
+            <a id="Contactpagelink" href="">Fender</a>&nbsp;&nbsp;<a id="Contactpagelink" href="">Rickenbaker</a><br/>
+            <a id="Contactpagelink" href="">Gibson</a>&nbsp;&nbsp;<a id="Contactpagelink" href="">Warwick</a><br/>
+            <a id="Contactpagelink" href="">Hofner</a>&nbsp;&nbsp;<a id="Contactpagelink" href="">Yamaha</a><br/>
+            <a id="Contactpagelink" href="">Contact Us</a><br/>
       </span><br/>
       
     </footer>
