--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -8,20 +8,25 @@
 </head>
 
 
-<body>
+<body >
 <header>
         <span class="HeaderBar">
-            <a id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
+            <span><a id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
             <a id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
-            <a id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;
-            <a id="LoginPageLink" href="../login/Login.html">Login</a><br/><hr/>
+            <a id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
+           <span > <form  id="LoginBar"  method="post" action="" enctype="multipart/form-data">
+                <span >
+                    <input  type="text" formaction="" placeholder="Username">
+                    <input type="password" placeholder="Password" maxlength="8">
+                    <input type="submit" value="Login"></span>
+            </form>
+               </span>
+                <br/><hr/>
         </span>
     
     
     <div class="HeaderLogo">
-        &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;    &nbsp;  &nbsp; &nbsp; &nbsp;    &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;    &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
-        &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;    &nbsp;  &nbsp; &nbsp; &nbsp;    &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;&nbsp;  &nbsp; &nbsp; &nbsp;
-        <img src="../../images/logo.png" height="210" width="280">
+         <img src="../../images/logo.png" height="210" width="280">
     </div>
 </header>
 
