--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -30,7 +30,7 @@
     </div>
 </header>
 
-<h2 name="about us">About us</h2>
+<h2 id="about us">About us</h2>
 <div class="Description">
         <p>LowerTone is a home-made bass guitar-shop, established in early 2019 by Tom Ben Sheffer. </p>
         <p>It all started 10 years ago, on 2009. Tom, was an electric-guitar player studied in Hof-Hasharon regional school. <br/>
