--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>About LowerTone</title>
     <link rel="shortcut icon" href="../../images/bgu-logo.ico"/>
-    <link rel="stylesheet" href="../../HeaderCSS.css">
+    <link rel="stylesheet" href="BasicCSS.css">
 </head>
 
 
