--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -11,14 +11,14 @@
 <body >
 <header>
         <span class="HeaderBar">
-            <span><a id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
-            <a id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
-            <a id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
+            <span><a class="lgnbtn" id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
+            <a class="lgnbtn" id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
+            <a class="lgnbtn" id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
            <span > <form  id="LoginBar"  method="post" action="" enctype="multipart/form-data">
                 <span >
-                    <input  type="text" formaction="" placeholder="Username">
-                    <input type="password" placeholder="Password" maxlength="8">
-                    <input type="submit" value="Login"></span>
+                    <input   type="text" formaction="" placeholder="Username">
+                    <input  type="password" placeholder="Password" maxlength="8">
+                    <input class="lgnbtn" type="submit" value="Login"></span>
             </form>
                </span>
                 <br/><hr/>
@@ -30,6 +30,7 @@
     </div>
 </header>
 
+<div class="content">
 <h2 id="about us">About us</h2>
 <div class="Description">
         <p>LowerTone is a home-made bass guitar-shop, established in early 2019 by Tom Ben Sheffer. </p>
@@ -42,6 +43,7 @@
                 Ever since Tom volunteered for the army, he did not manage to keep on playing liked he used to do, but the passion for bass guitars kept occupying his dreams. </p>
         <p>So! in order to keep on working on his desire, Tom opened the online bass-guitar shop - LowerTone.</p>
     </div><hr/>
+</div>
 
 <footer>
         <div>  <h3>Brands</h3>
