After Barak's Comments 1/6/19

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -14,13 +14,13 @@
             <span><a class="lgnbtn" id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
-           <span > <form  id="LoginBar"  method="post" action="" enctype="multipart/form-data">
-                <span >
-                    <input   type="text" formaction="" placeholder="Username">
-                    <input  type="password" placeholder="Password" maxlength="8">
-                    <input class="lgnbtn" type="submit" value="Login"></span>
-            </form>
-               </span>
+                 <span > <form  id="LoginBar"  method="post" action="">
+                    <span >
+                        <input  required id="Username" formaction="" placeholder="Username">
+                        <input required id="Password" type="password" placeholder="Password" maxlength="8">
+                        <input class="lgnbtn" type="submit" value="Login"></span>
+                                </form>
+                 </span>
                 <br/><hr/>
         </span>
     
