--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About LowerTone</title>
-    <link rel="shortcut icon" href="../../images/bgu-logo.ico"/>
+    <link rel="shorcut icon" href="../../images/BassLogo.jpeg" height="259" width="194"/>"
     <link rel="stylesheet" href="BasicCSS.css">
 </head>
 
