--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -14,6 +14,7 @@
             <span><a class="lgnbtn" id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
+            <a class="lgnbtn" id="AboutPagelink" href="../about/about.html">About Us</a>&nbsp;  &nbsp;</span>
                  <span > <form  id="LoginBar"  method="post" action="">
                     <span >
                         <input  required id="Username" formaction="" placeholder="Username">
