--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -13,7 +13,7 @@
         <span class="HeaderBar">
             <span><a class="lgnbtn" id="Homepagelink" href="../../index.html">Homepage </a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="Catalogpagelink" href="../catalog/Catalog.html">Catalog</a>&nbsp;  &nbsp;
-            <a class="lgnbtn" id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;</span>
+            <a class="lgnbtn" id="Linkspagelink" href="../links/Links.html">Links</a>&nbsp;  &nbsp;
             <a class="lgnbtn" id="AboutPagelink" href="../about/about.html">About Us</a>&nbsp;  &nbsp;</span>
                  <span > <form  id="LoginBar"  method="post" action="">
                     <span >
@@ -22,7 +22,7 @@
                         <input class="lgnbtn" type="submit" value="Login"></span>
                                 </form>
                  </span>
-                <br/><hr/>
+                <br/><hr style="margin: 5px;"/>
         </span>
     
     
